--- a/styles/style.css
+++ b/styles/style.css
@@ -87,6 +87,8 @@ nav > a:hover {
     text-decoration: none;
     background-color: var(--cor3);
     border-radius: 5px;
+    padding: 9px;
+    font-size: 1em;
     text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2);;
 }
@@ -183,7 +185,7 @@ aside > ul {
     columns: 2;
     list-style-position: inside;
     text-align: left;
-    margin-left: 10%;
+    margin-left: 3%;
     margin-top: 10px;
     margin-bottom: 10px;
     line-height: 1.5em;
